# safety-critical-traffic-light-driver

./: Cargo.toml  clippy.toml
examples/: demo.rs
src/: config.rs  input.rs  lib.rs  log.rs  output.rs  state.rs  step.rs  types.rs
tests/: safety.rs
