[package]
name = "safety-critical-traffic-light-driver"
version = "0.1.0"
edition = "2024"
description = "Traffic light controller"
authors = ["Mateusz Kaszubowski", "Weronika Koterba"]

[lib]
name = "tlc4"
path = "src/lib.rs"

[profile.release]
overflow-checks = true
panic = "abort"

[profile.dev]
overflow-checks = true
panic = "abort"

[lints.clippy]
disallowed_types = "deny"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "warn"